fixed some spacing issues when resizes to screens above 1200px in the header and about section

--- a/index.css
+++ b/index.css
@@ -44,6 +44,7 @@ body {
     padding-top: 120px;
     margin: auto;
     width: 400px;
+    padding-left: 2%;
 }
 
 .intro {
@@ -81,7 +82,6 @@ body {
     font-weight: 400;
     color: white;
     padding-top: 160px;
-    padding-right: 40px;
     margin: 0px;
     font-size: 16px;
 }
@@ -91,7 +91,6 @@ body {
     font-size: 40px;
     margin : 0px;
     text-align: center;
-    padding-right: 40px;
     padding-bottom: 200px;
     cursor: pointer;
 }
@@ -102,6 +101,7 @@ body {
     padding-top: 100px;
     font-family: Consolas, monaco, monospace;
     font-size: 20px;
+    padding-left: 14%;
     color: white;
     margin: auto;
 }
@@ -152,7 +152,6 @@ body {
     width: 400px;
     height: 400px;
     float: left;
-    border-radius: 20px;
 }
 
 .picture > img {
